# faircheck

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: basic_usage.py
faircheck/: __init__.py  version.py
faircheck/core/: __init__.py  audit.py  metrics.py
tests/: __init__.py  test_metrics.py
