[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faircheck"
version = "0.1.0"
description = "Fairness for AI, made simple. Audit, measure, and mitigate demographic bias in ML models."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Kasra Kakavand", email = "kasrakakavand@gmail.com"}
]
keywords = [
    "fairness",
    "machine-learning",
    "bias-detection",
    "ai-ethics",
    "ai-safety",
    "responsible-ai",
    "ml-fairness",
    "bias-mitigation",
    "explainable-ai",
    "mlops",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
# Visualization features
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
]

# Framework integrations
pytorch = ["torch>=1.10.0"]
tensorflow = ["tensorflow>=2.8.0"]
sklearn = ["scikit-learn>=1.0.0"]
huggingface = ["transformers>=4.20.0"]

# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

# Documentation
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=1.0.0",
]

# Everything
all = [
    "faircheck[viz,pytorch,tensorflow,sklearn,huggingface]",
]

[project.urls]
Homepage = "https://github.com/kasra-kakavand/faircheck"
Documentation = "https://github.com/kasra-kakavand/faircheck#readme"
Repository = "https://github.com/kasra-kakavand/faircheck"
Issues = "https://github.com/kasra-kakavand/faircheck/issues"
Changelog = "https://github.com/kasra-kakavand/faircheck/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["faircheck*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
faircheck = ["py.typed"]

# Black code formatter configuration
[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

# Ruff linter configuration
[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=faircheck",
    "--cov-report=term-missing",
]

# Coverage configuration
[tool.coverage.run]
source = ["faircheck"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
